<resources>
    <string name="app_name">Mahjong</string>
    <string name="bambou">Bamboo</string>
    <string name="feu">Character</string>
    <string name="piece">Circle</string>
    <string name="dragon">Dragon</string>
    <string name="vent">Wind</string>
    <string name="un">One</string>
    <string name="deux">Two</string>
    <string name="trois">Three</string>
    <string name="quatre">Four</string>
    <string name="cinq">Five</string>
    <string name="six">Six</string>
    <string name="sept">Seven</string>
    <string name="huit">Eight</string>
    <string name="neuf">Nine</string>

    <string name="background_image">Background image</string>
    <string name="logo_image">Logo image</string>
    <string name="game_name">Mahjong</string>
    <string name="button_play">PLAY</string>
    <string name="button_play_desc">play button</string>
    <string name="button_options">OPTIONS</string>
    <string name="button_options_desc">options button</string>
    <string name="button_quit">QUIT</string>
    <string name="button_quit_desc">quit button</string>

    <string name="button_connect_four">CONNECT FOUR</string>
    <string name="button_connect_four_desc">connect four button</string>
    <string name="button_tictactoe">TICTACTOE</string>
    <string name="button_tictactoe_desc">tictactoe button</string>

    <string name="button_confirm">Confirm</string>
    <string name="button_back">Back</string>

    <string name="text_games">Other Games</string>

    <string name="text_length">GAME LENGTH</string>
    <string name="text_thinking">THINKING TIME</string>

    <string name="hint_length">(default : 8)</string>
    <string name="hint_thinking">(default : 30)</string>

    <string name="default_length">8</string>
    <string name="default_thinking">30</string>
    <string name="blank"> </string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="player1Wins">Player1 Wins !</string>
    <string name="player2Wins">Player2 Wins !</string>
    <string name="draw">Draw!</string>
    <string name="reset">Reset Game</string>
    <string name="retry">Retry</string>
	<string name="descriptionImage">Image Hand</string>
    <string name="drawCard">Draw</string>

    <string name="launch">Launch App</string>
    <string name="button_confirm_desc">confirm button</string>
    <string name="button_back_desc">back button</string>
</resources>
