<?xml version="1.0" encoding="utf-8"?>
<!--@Author Benjamin Riviere-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mahjong.MainActivityOptions"
    android:id="@+id/main_container"
    android:background="@drawable/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_length"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/zero"

        android:text="@string/text_length"
        android:textColor="#FFFFFF"

        android:layout_weight="0.25"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/layout_top_margin" />

    <EditText
        android:id="@+id/input_length"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/zero"
        android:ems="10"

        android:hint="@string/hint_length"

        android:text="@string/default_length"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"

        android:gravity="center"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/text_thinking"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/zero"

        android:text="@string/text_thinking"
        android:textColor="#FFFFFF"

        android:layout_weight="0.25"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/options_margin" />

    <EditText
        android:id="@+id/input_thinking"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/zero"
        android:ems="10"

        android:hint="@string/hint_thinking"

        android:text="@string/default_thinking"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"

        android:gravity="center"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_confirm"
        android:contentDescription="@string/button_confirm_desc"
        android:background="@drawable/button_shape"

        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/zero"
        android:layout_weight="0.5"

        android:text="@string/button_confirm"
        android:textColor="@color/white"
        android:textStyle="bold"

        android:layout_gravity="center"
        android:layout_marginTop="@dimen/options_margin"
        android:layout_marginBottom="@dimen/layout_margin" />

</LinearLayout>