<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".PlayMahjong"
    android:layout_centerHorizontal="true">

    <ImageView
        android:id="@+id/background_img"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="fitXY"
        android:src="@drawable/background">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/text_game_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingBottom="80dp"
            android:text="@string/game_name"
            android:textColor="#FFFFFF"
            android:textSize="64sp"
            android:textStyle="bold"
            tools:text="@string/game_name"
            android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/button_play"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:layout_below="@+id/text_game_name"
            android:layout_centerHorizontal="true"
            android:text="@string/button_play" />
        <Button
            android:id="@+id/button_options"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/button_play"
            android:layout_centerHorizontal="true"
            android:text="@string/button_options" />
        <Button
            android:id="@+id/button_quit"
            android:layout_width="150dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_options"
            android:layout_centerHorizontal="true"
            android:text="@string/button_quit" />

    </RelativeLayout>

</RelativeLayout>

