<?xml version="1.0" encoding="utf-8"?>
<!--@Author Benjamin Riviere-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mahjong.MainActivityMenu"
    android:id="@+id/main_container"
    android:background="@drawable/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:contentDescription="@string/logo_image"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_mahjonque_resized" />

    <LinearLayout
        android:id="@+id/sub_container"
        android:layout_width="@dimen/linear_width"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/logo"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/linear_bot_button_margin"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/button_play"
            android:background="@drawable/button_shape"

            android:layout_width="@dimen/button_width"
            android:layout_height="fill_parent"
            android:layout_weight="1"

            android:text="@string/button_play"
            android:textColor="@color/white"
            android:textStyle="bold"

            android:layout_gravity="center"
            android:layout_marginTop="@dimen/linear_top_button_margin"/>

        <Button
            android:id="@+id/button_options"
            android:background="@drawable/button_shape"

            android:layout_width="@dimen/button_width"
            android:layout_height="fill_parent"
            android:layout_weight="1"

            android:text="@string/button_options"
            android:textColor="@color/white"
            android:textStyle="bold"

            android:layout_gravity="center"
            android:layout_marginTop="@dimen/between_button_margin"/>

        <Button
            android:id="@+id/button_quit"
            android:background="@drawable/button_shape"

            android:layout_width="@dimen/button_width"
            android:layout_height="fill_parent"
            android:layout_weight="1"

            android:text="@string/button_quit"
            android:textColor="@color/white"
            android:textStyle="bold"

            android:layout_gravity="center"
            android:layout_marginTop="@dimen/between_button_margin"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/easter_egg_container"
        android:layout_width="@dimen/linear_width"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/logo"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/linear_bot_button_margin"
        android:layout_marginEnd="@dimen/linear_bot_button_margin">

        <View
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/text_games"/>

        <Button
            android:id="@+id/button_connect_four"
            android:background="@drawable/button_shape"

            android:layout_width="@dimen/button_width"
            android:layout_height="fill_parent"
            android:layout_weight="1"

            android:text="@string/button_connect_four"
            android:textColor="@color/white"
            android:textStyle="bold"

            android:layout_gravity="center"
            android:layout_marginTop="@dimen/between_button_margin"/>

        <Button
            android:id="@+id/button_tictactoe"
            android:background="@drawable/button_shape"

            android:layout_width="@dimen/button_width"
            android:layout_height="fill_parent"
            android:layout_weight="1"

            android:text="@string/button_tictactoe"
            android:textColor="@color/white"
            android:textStyle="bold"

            android:layout_gravity="center"
            android:layout_marginTop="@dimen/between_button_margin"/>

    </LinearLayout>

</RelativeLayout>
