<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mahjong.MainActivityTicTacToe">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/player1"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_view_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_p1"
            android:freezesText="true"
            android:text="@string/player2"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/reset" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/button_reset"
            android:text="@string/retry" />

    </RelativeLayout>


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="*">


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_00"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="?android:attr/buttonBarButtonStyle"
                android:background="#000000"
                android:freezesText="true"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_01"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="?android:attr/buttonBarButtonStyle"
                android:background="#101010"
                android:freezesText="true"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_02"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="?android:attr/buttonBarButtonStyle"
                android:background="#000000"
                android:freezesText="true"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_10"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="?android:attr/buttonBarButtonStyle"
                android:background="#101010"
                android:freezesText="true"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_11"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="?android:attr/buttonBarButtonStyle"
                android:background="#000000"
                android:freezesText="true"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_12"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="?android:attr/buttonBarButtonStyle"
                android:background="#101010"
                android:freezesText="true"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_20"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="?android:attr/buttonBarButtonStyle"
                android:background="#000000"
                android:freezesText="true"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_21"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="?android:attr/buttonBarButtonStyle"
                android:background="#101010"
                android:freezesText="true"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_22"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="?android:attr/buttonBarButtonStyle"
                android:background="#000000"
                android:freezesText="true"
                android:textSize="30sp" />

        </TableRow>

    </TableLayout>

</LinearLayout>